objects/FSL__Time_Dependency__c.object
<CustomObject>
    <label>Appointment Dependency</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Appointment Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>FSL__Dependency__c</fullName>
        <label>Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                    <default>true</default>
                    <label>Same Start</label>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Start After Finish And Same Day</fullName>
                </value>
                <value>
                    <fullName>Immediately Follow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Appointment_1__c</fullName>
        <label>Service Appointment 1</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipName>Time_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Appointment_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Appointment 2</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipName>Time_Dependencies_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Root_Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Appointment Dependencies (Root Service Appointment)</relationshipLabel>
        <relationshipName>Time_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>FSL__Root_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FSL__Root_Service_Appointment__c)</errorConditionFormula>
        <errorDisplayField>FSL__Root_Service_Appointment__c</errorDisplayField>
        <errorMessage>Root service appointment is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Dependency_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FSL__Dependency__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>FSL__Dependency__c</errorDisplayField>
        <errorMessage>Select a dependency type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(FSL__Dependency__c , &apos;Immediately Follow&apos;), FSL__Same_Resource__c = FALSE)</errorConditionFormula>
        <errorDisplayField>FSL__Dependency__c</errorDisplayField>
        <errorMessage>Immediately Follow dependency requires Same Resource</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Appointment_2_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FSL__Service_Appointment_2__c)</errorConditionFormula>
        <errorDisplayField>FSL__Service_Appointment_2__c</errorDisplayField>
        <errorMessage>Service appointment 2 is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Appointment_2_Not_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(FSL__Service_Appointment_2__c)</errorConditionFormula>
        <errorDisplayField>FSL__Service_Appointment_2__c</errorDisplayField>
        <errorMessage>It is not allowed to change any of the service appointments in the relationship</errorMessage>
    </validationRules>
</CustomObject>